--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </ul>
     </div>
     <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://www.frontendmentor.io/profile/ATiarK">Ahmad Tiar K</a>.
     </div>
 </footer>
 
