--- a/index.html
+++ b/index.html
@@ -151,19 +151,12 @@
                 </a>
             </li>
             <li>
-                <a href="#">
-                    <i class="fab fa-instagram"></i>
-                </a>
+                <a href="#"> <i class="fab fa-instagram"></i> </a>
             </li>
             <li>
-                <a href="#">
-                    <i class="fab fa-twitter"></i>
-                </a>
+                <a href="#"> <i class="fab fa-twitter"></i> </a>
             </li>
-            <li>
-                <a href="#">
-                    <i class="fab fa-pinterest"></i>
-                </a>
+            <li><a href="#"><i class="fab fa-pinterest"></i></a>
             </li>
         </ul>
     </div>
